--- a/app/src/main/res/layout/layout_custom_dialog_cgpa.xml
+++ b/app/src/main/res/layout/layout_custom_dialog_cgpa.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/textTotal"
@@ -13,18 +15,15 @@
         android:textColor="#FFF"
         android:textSize="30sp"
         android:textStyle="bold" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textViewSemester"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total Semester:"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/MySECcolor"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -38,20 +37,16 @@
             android:textColor="#000"
             android:textSize="25sp"
             android:textStyle="bold" />
-
     </LinearLayout>
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp">
-
-        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <TextView
             android:id="@+id/textViewCredit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total Credit:"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/MySECcolor"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -65,20 +60,16 @@
             android:textColor="#000"
             android:textSize="25sp"
             android:textStyle="bold" />
-
     </LinearLayout>
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp">
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textViewSgpa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total SGPA:"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/MySECcolor"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -92,24 +83,19 @@
             android:textColor="#000"
             android:textSize="24sp"
             android:textStyle="bold" />
-
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <View
         android:layout_width="fill_parent"
-        android:layout_height="3dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="201dp"
+        android:layout_height="2dp"
         android:background="#2d2121" />
-
+    </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="202dp">
-
-        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <TextView
             android:id="@+id/textViewCgpa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -128,16 +114,12 @@
             android:textColor="#000"
             android:textSize="25sp"
             android:textStyle="bold" />
-
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="50dp"
+        android:layout_gravity="center"
         >
-
         <Button
             android:id="@+id/buttonOk"
             android:layout_width="wrap_content"
@@ -146,7 +128,6 @@
             android:background="@drawable/cgpa_btn_shape"
             android:text="Ok"
             />
+    </LinearLayout>
 
-    </RelativeLayout>
-
-</RelativeLayout>
+</LinearLayout>
