--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -227,13 +227,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-                <Button
-                    android:id="@+id/login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="login"
-                    android:onClick="loginDialog"
-                    />
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -253,13 +246,13 @@
 
                             >
                             <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="120dp"
                                 android:orientation="vertical"
                                 >
                                 <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
+                                    android:layout_width="80dp"
+                                    android:layout_height="80dp"
                                     android:src="@drawable/camp_new"
                                     android:scaleType="fitXY"
                                     />
@@ -287,20 +280,55 @@
                             android:id="@+id/schedule"
                             >
                             <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="120dp"
                                 android:orientation="vertical"
                                 >
 
                                 <ImageView
-                                    android:layout_width="120dp"
-                                    android:layout_height="120dp"
+                                    android:layout_width="80dp"
+                                    android:layout_height="80dp"
                                     android:src="@drawable/tech_list"
                                     android:scaleType="fitXY" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Schedule"
+                                    android:textColor="#000"
+                                    android:textStyle="bold"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_margin="20dp"
+                        android:layout_height="wrap_content"
+                        card_view:cardCornerRadius="4dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/login"
+                            android:onClick="loginDialog"
+                            >
+                            <LinearLayout
+                                android:layout_width="80dp"
+                                android:layout_height="120dp"
+                                android:orientation="vertical"
+                                >
+
+                                <ImageView
+                                    android:layout_width="80dp"
+                                    android:layout_height="80dp"
+                                    android:src="@drawable/signin"
+                                    android:scaleType="fitXY" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Log In"
                                     android:textColor="#000"
                                     android:textStyle="bold"
                                     android:gravity="center"
