--- a/app/src/main/res/layout/activity_holidays_news.xml
+++ b/app/src/main/res/layout/activity_holidays_news.xml
@@ -6,74 +6,222 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".HolidaysNews">
-    <RelativeLayout
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:paddingRight="5dp"
+        android:layout_margin="4dp"
         android:layout_height="wrap_content"
-        android:id="@+id/errormassege"
+        card_view:cardCornerRadius="5dp"
+        android:id="@+id/cardvisiblesearch"
         android:visibility="gone"
-        android:background="@drawable/neterrorback"
         >
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Please, Ensure Your Net connection !"
-            android:textSize="25dp"
-            android:gravity="center"
-            />
-    </RelativeLayout>
+            android:id="@+id/searchlayout"
+            android:background="@color/MySECcolor"
+            >
+            <EditText
+                android:id="@+id/inputsearchholi"
+                android:layout_width="match_parent"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="3dp"
+                android:layout_height="33dp"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:background="@drawable/edittext_style_merged_focuseandnormal"
+                android:hint="date (i.e. 29)" />
+
+            <ImageButton
+                android:id="@+id/search_holi"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                app:srcCompat="@drawable/search"
+                android:scaleType="center"
+                android:background="@color/MySECcolor"
+                tools:ignore="VectorDrawableCompat" />
+
+            <ImageButton
+                android:id="@+id/close_holi"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:background="@color/MySECcolor"
+                android:scaleType="center"
+                app:srcCompat="@drawable/close"
+                tools:ignore="VectorDrawableCompat" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="visible"
-        android:id="@+id/addholidays"
-        >
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/holidays_date"
-            android:hint="29"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/holidays_month"
-            android:hint="Aug"
-            >
-        </EditText>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/holidays_tittle"
-            android:hint="21st February"
-            >
-        </EditText>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/holidays_dur_text"
-            android:hint="19 feb-21 feb"
-            >
-        </EditText>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/holidays_dur_day"
-            android:hint="2 days"
-            >
-        </EditText>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="submit"
-            android:id="@+id/submit_holidays"
-            />
-    </LinearLayout>
-    <ListView
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listViewHolidays"
+        android:orientation="vertical"
         >
-    </ListView>
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:paddingRight="5dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            card_view:cardCornerRadius="5dp"
+            android:id="@+id/cardvisibleadd"
+            android:visibility="gone"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/visibletechcseadd"
+                >
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/holi_tittle"
+                    android:hint="Eid Vacation"
+                    android:padding="5dp"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/edittext_style_merged_focuseandnormal"
+                    android:textColor="@color/MySECcolor"
+                    />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/holi_date"
+                    android:hint="29"
+                    android:padding="5dp"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/edittext_style_merged_focuseandnormal"
+                    android:textColor="@color/MySECcolor"
+                    />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/holi_month"
+                    android:hint="feb"
+                    android:layout_margin="2dp"
+                    android:padding="5dp"
+                    android:background="@drawable/edittext_style_merged_focuseandnormal"
+                    android:textColor="@color/MySECcolor"
+                    />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/holi_dur_text"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/edittext_style_merged_focuseandnormal"
+                    android:hint="27 feb - 17 mar"
+                    android:padding="5dp"
+                    android:textColor="@color/MySECcolor"
+                    />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/holi_dur_day"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/edittext_style_merged_focuseandnormal"
+                    android:hint="20 days"
+                    android:padding="5dp"
+                    android:textColor="@color/MySECcolor"
+                    />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="submit"
+                    android:id="@+id/holi_submit"
+                    />
+                <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="5dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_height="wrap_content"
+                    card_view:contentPaddingRight="10dp"
+                    card_view:contentPaddingLeft="10dp"
+                    card_view:cardCornerRadius="4dp"
+                    android:layout_gravity="end"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Delete a list"
+                        android:onClick="deleteactive"
+                        />
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:paddingRight="5dp"
+            android:layout_margin="4dp"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="5dp"
+            android:id="@+id/cardvisibledelete"
+            android:visibility="gone"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="key"
+                    android:id="@+id/holi_key"
+                    />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="delete"
+                    android:id="@+id/holi_delete"
+                    />
+                <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="5dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_height="wrap_content"
+                    card_view:contentPaddingRight="10dp"
+                    card_view:contentPaddingLeft="10dp"
+                    card_view:cardCornerRadius="4dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_gravity="end"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add a list"
+                        android:onClick="Addactive"
+                        />
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/holi_recycler"
+                >
+
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
