--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -308,7 +308,10 @@
                         android:layout_width="match_parent"
                         android:layout_margin="20dp"
                         android:layout_height="wrap_content"
-                        card_view:cardCornerRadius="4dp">
+                        card_view:cardCornerRadius="4dp"
+                        android:id="@+id/logincard"
+                        android:visibility="visible"
+                        >
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -330,6 +333,43 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Log In"
+                                    android:textColor="#000"
+                                    android:textStyle="bold"
+                                    android:gravity="center"
+                                    android:layout_gravity="center"
+                                    />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_margin="20dp"
+                        android:layout_height="wrap_content"
+                        card_view:cardCornerRadius="4dp"
+                        android:id="@+id/logoutcard"
+                        android:visibility="gone"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:onClick="logout"
+                            >
+                            <LinearLayout
+                                android:layout_width="80dp"
+                                android:layout_height="120dp"
+                                android:orientation="vertical"
+                                >
+
+                                <ImageView
+                                    android:layout_width="80dp"
+                                    android:layout_height="80dp"
+                                    android:src="@drawable/logout"
+                                    android:scaleType="fitXY" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Log Out"
                                     android:textColor="#000"
                                     android:textStyle="bold"
                                     android:gravity="center"
